# diplomat

./: .gitattributes  .gitignore  404.html  Cargo.toml  ContributingOnWindows.md  Makefile.toml  README.md  abi.html  attrs.html  basics.html  callbacks.html  config.html  developer.html  docs.html  index.html  intro.html  lifetimes.html  macros.html  newjsbackendnotes.md  opaque.html  option.html  print.html  regen_integration_tests.sh  result.html  safety.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-131f8d4b.js  searchindex-1ae1f8d0.js  searchindex-35e069ed.js  searchindex-38787e29.js  searchindex-38969b66.js  searchindex-38f1a218.js  searchindex-3bb33124.js  searchindex-40ca4673.js  searchindex-443f8944.js  searchindex-4c2995de.js  searchindex-50536f91.js  searchindex-625f59d9.js  searchindex-64ab400b.js  (+38 more)
book/preprocessor/: Cargo.toml
book/preprocessor/src/: filters.rs  main.rs
book/preprocessor/templates/: supported_by.md.jinja  supports.md.jinja
core/: Cargo.toml
core/src/: environment.rs  lib.rs  meta.rs
core/src/ast/: attrs.rs  docs.rs  enums.rs  functions.rs  idents.rs  lifetimes.rs  logging.rs  macros.rs  methods.rs  mod.rs  modules.rs  opaque.rs  paths.rs  structs.rs  traits.rs  types.rs  utils.rs  validity.rs
core/src/hir/: attrs.rs  defs.rs  docs.rs  elision.rs  error.rs  lifetimes.rs  lowering.rs  methods.rs  mod.rs  paths.rs  primitives.rs  ty_position.rs  type_context.rs  types.rs
core/src/meta/: methods.rs  mod.rs  structs.rs  types.rs
example/: Cargo.toml  config.toml  diplomat-demo-conf.toml  gen_all.sh
example/benches/: icu4x_bench.rs
example/c/: ICU4XFixedDecimal.h  ICU4XFixedDecimalFormat.h  ICU4XFixedDecimalFormatResult.h  ICU4XLocale.h  Makefile  MyStruct.h  Opaque.h  api.h  data_provider_ffi_ICU4XDataProvider.h  decimal_ffi_ICU4XFixedDecimalFormat.h  decimal_ffi_ICU4XFixedDecimalSignDisplay.h  main.c  result_box_ResultOpaque_ErrorEnum.h  result_box_ResultOpaque_void.h  result_void_box_ResultOpaque.h
example/c/include/: DataProvider.d.h  DataProvider.h  FixedDecimal.d.h  FixedDecimal.h  FixedDecimalFormatter.d.h  FixedDecimalFormatter.h  FixedDecimalFormatterOptions.d.h  FixedDecimalFormatterOptions.h  FixedDecimalGroupingStrategy.d.h  FixedDecimalGroupingStrategy.h  ICU4XDataProvider.h  ICU4XFixedDecimal.h  ICU4XFixedDecimalFormat.h  ICU4XFixedDecimalFormatOptions.h  ICU4XFixedDecimalFormatOptions_type.h  ICU4XFixedDecimalFormatResult.h  ICU4XFixedDecimalFormatResult_type.h  ICU4XFixedDecimalFormatter.h  ICU4XLocale.h  Locale.d.h  (+6 more)
example/c2/: Makefile  main.c
example/cpp/: ErrorStruct.h  ErrorStruct.hpp  ICU4XDataProvider.hpp  ICU4XFixedDecimal.hpp  ICU4XFixedDecimalFormat.hpp  ICU4XFixedDecimalFormatOptions.hpp  ICU4XFixedDecimalFormatResult.hpp  ICU4XLocale.h  ICU4XLocale.hpp  Makefile  MyStruct.h  MyStruct.hpp  Opaque.hpp  api.h  api.hpp  data_provider_ffi_ICU4XDataProvider.h  data_provider_ffi_ICU4XDataProvider.hpp  decimal_ffi_ICU4XFixedDecimalFormat.h  decimal_ffi_ICU4XFixedDecimalFormat.hpp  decimal_ffi_ICU4XFixedDecimalFormatOptions.h  decimal_ffi_ICU4XFixedDecimalFormatOptions.hpp  decimal_ffi_ICU4XFixedDecimalFormatResult.h  decimal_ffi_ICU4XFixedDecimalFormatResult.hpp  decimal_ffi_ICU4XFixedDecimalGroupingStrategy.h  decimal_ffi_ICU4XFixedDecimalGroupingStrategy.hpp  decimal_ffi_ICU4XFixedDecimalSignDisplay.hpp  diplomat_runtime.hpp  fixed_decimal_ffi_ICU4XFixedDecimal.h  fixed_decimal_ffi_ICU4XFixedDecimal.hpp  fixed_decimal_ffi_result_void_void.h  locale_ffi_ICU4XLocale.h  locale_ffi_ICU4XLocale.hpp  main.cpp  result_void_void.h
example/cpp2/: Makefile
example/dart/: build.dart  pubspec.yaml
example/demo-gen/: .gitignore  README.md  package.json
example/demo_gen/: .gitignore  README.md  diplomat.config.mjs  index.html  index.mjs  package-lock.json  package.json
example/js/: .gitignore  README.md  api.mjs  diplomat-runtime.mjs  high-level.mjs  index.html  main.mjs  make_sphinx_happy.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  wasm.mjs
example/js2/: README.md  package.json
example/kotlin/: .gitignore
example/simple_testing/: Cargo.toml
example/src/: data_provider.rs  decimal.rs  fixed_decimal.rs  lib.rs  locale.rs  main.rs  other.rs
feature_tests/: Cargo.toml  config.toml  diplomat-demo-conf.toml  diplomat-java-conf.toml  diplomat-py-conf.toml  gen_all.sh  kt-conf.toml
feature_tests/c/: Counter.h  ErrorEnum.h  ErrorStruct.h  MyStruct.h  Opaque.h  OptionOpaque.h  OptionOpaqueChar.h  ResultOpaque.h  result_box_ResultOpaque_ErrorEnum.h  result_box_ResultOpaque_ErrorStruct.h  result_box_ResultOpaque_void.h  result_void_box_ResultOpaque.h
feature_tests/cpp/: Makefile
feature_tests/cpp2/: Makefile
feature_tests/dart/: analysis_options.yaml  build.dart  pubspec.yaml
feature_tests/demo_gen/: .gitignore  diplomat.config.mjs  index.mjs  package-lock.json  package.json
feature_tests/dotnet/: .gitignore  DiplomatFeatures.sln  Somelib.FeatureTests.csproj  dotnet-interop-conf.toml  net48.config  run_tests.sh
feature_tests/js/: .gitignore  api.mjs  ava.config.js  ava.legacy.config.js  diplomat-runtime.mjs  diplomat.config.js  diplomat.config.mjs  package-lock.json  package.json  tsconfig.json  wasm.mjs
feature_tests/js2/: package.json  tsconfig.json
feature_tests/kotlin/: .gitignore  libsomelib.dylib
feature_tests/nanobind/: .gitignore  CMakeLists.txt  CMakelists.txt  Makefile  pyproject.toml
feature_tests/py-nb/: Makefile  nanobindings.cpp
feature_tests/src/: attrs.rs  callbacks.rs  imports.rs  lib.rs  lifetimes.rs  method_overloading.rs  option.rs  ownership.rs  result.rs  selftype.rs  slices.rs  structs.rs  traits.rs
macro/: Cargo.toml  LICENSE
macro/src/: enum_convert.rs  lib.rs  transparent_convert.rs
runtime/: Cargo.toml
runtime/src/: callback.rs  lib.rs  result.rs  rust_interop.rs  slices.rs  wasm_glue.rs  write.rs  writeable.rs
tool/: Cargo.toml
tool/src/: c.rs  config.rs  docs_util.rs  filters.rs  js.rs  layout.rs  layout_hir.rs  lib.rs  main.rs  sphinx_docs.rs  tests.rs  util.rs  writeable.h
tool/tests/: dotnet_target.rs
(+3762 files in other folders)
