[workspace]
resolver = "2"
members = [
  "core",
  "macro",
  "runtime",
  "tool",
  "example",
  "feature_tests",
]

[workspace.package]

# Individual subcrates may choose to temporarily switch to a different version
version = "0.10.0"
# Applies to diplomat-core, diplomat, and diplomat-runtime
# Diplomat-tool has no MSRV for now
rust-version = "1.71"
authors = [
    "Shadaj Laddad <shadaj@users.noreply.github.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Quinn Okabayashi <QnnOkabayashi@users.noreply.github.com>"
]
edition = "2021"
repository = "https://github.com/rust-diplomat/diplomat"
license = "MIT OR Apache-2.0"
categories = ["development-tools", "compilers"]
keywords = ["ffi", "codegen"]

[workspace.dependencies]
diplomat = { version = "0.10.0", path = "macro", default-features = false }
diplomat_core = { version = "0.10.0", path = "core", default-features = false }
diplomat-runtime = { version = "0.10.0", path = "runtime", default-features = false }
diplomat-tool = { version = "0.10.0", path = "tool", default-features = false }
