[package]
name = "diplomat_core"
description = "Shared utilities between Diplomat macros and code generation"
version = "0.4.0"
authors = [
    "Shadaj Laddad <shadaj@users.noreply.github.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Quinn Okabayashi <QnnOkabayashi@users.noreply.github.com>"
]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/diplomat_core/"
edition = "2021"
keywords = ["ffi", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
impls = "1"
proc-macro2 = "1.0.27"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
displaydoc = { version = "0.2", optional = true }
rustdoc-types = "0.11"
smallvec = "1.9.0"
strck_ident = { version = "0.1", features = ["rust"] }

[dev-dependencies]
insta = "1.7.1"
