[package]
name = "diplomat-example"
version = "0.4.1"
authors = [
    "Shadaj Laddad <shadaj@users.noreply.github.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Quinn Okabayashi <QnnOkabayashi@users.noreply.github.com>"
]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
diplomat = { path = "../macro" }
diplomat-runtime = { path = "../runtime" }
icu = "0.3.0"
writeable = "0.2.0"
fixed_decimal = "0.2.1"
icu_provider = { version = "0.3.0", features = ["provider_serde"] }
icu_testdata = { version = "0.3.0", features = ["static"] }
