[package]
name = "diplomat-example"
version = "0.5.0"
authors = [
    "Shadaj Laddad <shadaj@users.noreply.github.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Quinn Okabayashi <QnnOkabayashi@users.noreply.github.com>"
]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
diplomat = { path = "../macro" }
diplomat-runtime = { path = "../runtime" }
icu = "1.0.0"
writeable = "0.5.0"
fixed_decimal = "0.5.1"
icu_provider = { version = "1.0", features = ["serde"] }
icu_testdata = { version = "1.0" }
