[package]
name = "diplomat-example"
publish = false
version.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme = "../README.md"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
diplomat.workspace = true
diplomat-runtime.workspace = true
icu = "1.2"
writeable = "0.5.2"
fixed_decimal = "0.5.3"
icu_provider = { version = "1.2", features = ["serde"] }
icu_testdata = { version = "1.2" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "icu4x_bench"
harness = false
