[package]
name = "diplomat-feature-tests"
version = "0.5.0"
authors = [
    "Shadaj Laddad <shadaj@users.noreply.github.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Quinn Okabayashi <QnnOkabayashi@users.noreply.github.com>"
]
edition = "2018"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
diplomat = { path = "../macro" }
diplomat-runtime = { path = "../runtime" }
