[package]
name = "diplomat-feature-tests"
publish = false
version.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true


[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
diplomat.workspace = true
diplomat-runtime = { workspace = true, features = ["log", "jvm-callback-support"] }
log = { version = "0.4" }
