[package]
name = "diplomat"
description = "The diplomat FFI generation macro"
version = "0.8.0"
authors = [
    "Shadaj Laddad <shadaj@users.noreply.github.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Quinn Okabayashi <QnnOkabayashi@users.noreply.github.com>"
]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/diplomat_core/"
keywords = ["ffi", "codegen"]
categories = ["development-tools"]
repository = "https://github.com/rust-diplomat/diplomat"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
diplomat_core = { path = "../core", version = "0.8.0" }
syn = { version = "2.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
proc-macro2 = "1.0.27"

[dev-dependencies]
insta = "1.7.1"
tempfile = "3.2.0"
