[package]
name = "diplomat-runtime"
description = "Common runtime utilities used by diplomat codegen"
version = "0.8.1"
rust-version.workspace = true
authors = [
    "Shadaj Laddad <shadaj@users.noreply.github.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Quinn Okabayashi <QnnOkabayashi@users.noreply.github.com>"
]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/diplomat_core/"
keywords = ["ffi", "codegen"]
categories = ["development-tools"]
repository = "https://github.com/rust-diplomat/diplomat"

[lib]
path = "src/lib.rs"

[features]
jvm-callback-support = ["dep:jni"]
log = ["dep:log"]

[dependencies]
jni = { version  = "0.21", optional = true }
log = { version = "0.4", optional = true }
