[package]
name = "diplomat-tool"
description = "Tool for generating FFI bindings for various languages"
version = "0.2.0"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>", "Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/diplomat_core/"
keywords = ["ffi", "codegen"]
categories = ["development-tools"]

[dependencies]
diplomat_core = { path = "../core", version = "0.2.0" }
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
syn-inline-mod = "0.4.0"
quote = "1.0"
indenter = "0.3.3"
pulldown-cmark = "0.8.0"
structopt = "0.3"
colored = "2.0"
serde = { features = ["derive"], version = "1.0.130" }
toml = "0.5.8"

[dev-dependencies]
insta = { version = "1.7.1", features = [ "backtrace" ] }
