[package]
name = "diplomat-tool"
description = "Tool for generating FFI bindings for various languages"
version = "0.7.1"
authors = [
    "Shadaj Laddad <shadaj@users.noreply.github.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Quinn Okabayashi <QnnOkabayashi@users.noreply.github.com>"
]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/diplomat_core/"
keywords = ["ffi", "codegen"]
categories = ["development-tools"]
repository = "https://github.com/rust-diplomat/diplomat"

[dependencies]
diplomat_core = { path = "../core", version = "0.7.0", features = ["displaydoc", "hir"] }
syn = { version = "2", features = [ "full", "extra-traits" ] }
syn-inline-mod = "0.6.0"
quote = "1.0"
indenter = "0.3.3"
pulldown-cmark = "0.8.0"
clap = { features = ["color", "derive", "std", "suggestions"], version = "3.2.2" }
colored = "2.0"
serde = { features = ["derive"], version = "1.0.130" }
toml = "0.5.8"
heck = "0.4" # conversion between naming convention
displaydoc = "0.2"
askama = "0.12"

[dev-dependencies]
insta = { version = "1.7.1", features = [ "backtrace" ] }
