[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "somelib"
version = "0.0.1"
description = "A brief description of what this project does"
requires-python = ">=3.9"
classifiers = ["License :: Apache2.0"]

[project.urls]
Homepage = "https://github.com/rust-diplomat/diplomat"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp39"
